manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      volumes:
        - name: shared-share
          persistentVolumeClaim:
            claimName: share-claim
      containers:
        # - name: hasher
        #   image: rvlq/hasher:1.10
        #   volumeMounts: # Mount volume
        #   - name: shared-share
        #     mountPath: /code/app/files
        - name: log-output
          image: rvlq/log-output:1254
          volumeMounts: # Mount volume
          - name: shared-share
            mountPath: /code/app/shared
        - name: ping-pong
          image: rvlq/ping-pong:0950
          volumeMounts:
          - name: shared-share
            mountPath: /app/shared
          resources:
              limits:
                memory: "64Mi"
                cpu: "100m"
