manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: log-output-svc
  namespace: exercises
spec:
  # type: NodePort
  type: ClusterIP
  selector:
    app: log-output # This is the app as declared in the deployment.
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 7777
    # - name: http
    #   nodePort: 31337 # This is the port that is available outside. Value for nodePort can be between 30000-32767
    #   protocol: TCP
    #   port: 1234 # This is a port that is available to the cluster, in this case it can be ~ anything
    #   targetPort: 9999 # This is the target port
