manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: log-output-ingress
  namespace: exercises
spec:
  rules:
  - http:
      paths:
      # - path: /pingpong
      #   pathType: Prefix
      #   backend:
      #     service:
      #       name: ping-pong-svc
      #       port:
      #         number: 1234              
      - path: /
        pathType: Prefix
        host: log.localhost
        backend:
          service:
            name: log-output-svc
            port:
              number: 2345
